--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BASE_URL = "http://localhost:3000"
+VITE_BASE_URL ="https://resume99server.onrender.com" #"http://localhost:3000"
 VITE_GOOGLE_CLIENT_ID="908327063501-cr037cqmoen88n33lscral0h4sl7adad.apps.googleusercontent.com"
